@@ -90,7 +90,7 @@ class tx_rtehtmlarea_acronym_mod {
 					document.getElementById("abbrType").innerHTML = "' . $LANG->getLL('Abbreviation') . '";
 				}
 				document.getElementById("title").value = param["title"];
-				fillSelect(param["text"]);
+				fillSelect(param);
 				dialog.resize();
 			}
 			
@@ -116,22 +116,40 @@ class tx_rtehtmlarea_acronym_mod {
 				document.getElementById("title").focus();
 			};
 			
-			function fillSelect(text) {
+			function fillSelect(param) {
 				var termSelector = document.getElementById("termSelector");
 				var acronymSelector = document.getElementById("acronymSelector");
-				while(termSelector.options.length>1) termSelector.options[termSelector.length-1] = null;
-				while(acronymSelector.options.length>1) acronymSelector.options[acronymSelector.length-1] = null;
-				if(abbrType == "acronym") var abbrObj = acronyms;
-					else var abbrObj = abbreviations;
-				if(abbrObj != "") {
-					for(var i in abbrObj) {
-						same = (i==text);
-						termSelector.options[termSelector.options.length] = new Option(abbrObj[i], abbrObj[i], false, same);
-						acronymSelector.options[acronymSelector.options.length] = new Option(i, i, false, same);
-						if(same) document.content.title.value = abbrObj[i];
+				while (termSelector.options.length > 1) {
+					termSelector.options[termSelector.length-1] = null;
+				}
+				while (acronymSelector.options.length > 1) {
+					acronymSelector.options[acronymSelector.length-1] = null;
+					}
+				if (abbrType == "acronym") {
+					var abbrObj = acronyms;
+				} else {
+					var abbrObj = abbreviations;
+				}
+				if (abbrObj != "") {
+					var sameTerm = false;
+					var sameAbbreviation = false;
+					for (var i in abbrObj) {
+						if (param["title"]) {
+							sameTerm = (param["title"] == i);
+						} else {
+							sameTerm = (param["text"] == i);
+						}
+						sameAbbreviation = (param["text"] == abbrObj[i]);
+						if (!param["text"] || sameTerm || sameAbbreviation) {
+							termSelector.options[termSelector.options.length] = new Option(i, i, false, sameTerm);
+							acronymSelector.options[acronymSelector.options.length] = new Option(abbrObj[i], abbrObj[i], false, sameTerm);
+						}
+						if (sameTerm) {
+							document.content.title.value = i;
+						}
 					}
 				}
-				if(acronymSelector.options.length == 1) {
+				if (acronymSelector.options.length == 1) {
 					document.getElementById("selector").style.display = "none";
 				} else {
 					document.getElementById("selector").style.display = "block";
