@@ -1,3 +1,7 @@
+2008-09-18  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #9331: htmlArea RTE Acronym feature: List of unabridged terms shows wrong values
+
 2008-09-16  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Follow up to #9354: htmlArea RTE: no default css rule is provided for indentation: px to em
